LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/GM_SERV_LINES__x.object-meta.xml
<CustomObject>
    <description>GM_SERV_LINES</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>GM_SERV_LINES</externalName>
    <label>GM_SERV_LINES</label>
    <pluralLabel>GM_SERV_LINES</pluralLabel>
</CustomObject>