LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/IS_DEFAULT__c.field-meta.xml
<CustomField>
    <fullName>IS_DEFAULT__c</fullName>
    <description>IS_DEFAULT</description>
    <externalDeveloperName>IS_DEFAULT</externalDeveloperName>
    <label>IS_DEFAULT</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>