LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/OPERATION_LEADER__c.field-meta.xml
<CustomField>
    <fullName>OPERATION_LEADER__c</fullName>
    <description>OPERATION_LEADER</description>
    <externalDeveloperName>OPERATION_LEADER</externalDeveloperName>
    <label>OPERATION_LEADER</label>
    <length>8</length>
    <type>Text</type>
</CustomField>