LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/OREDER__c.field-meta.xml
<CustomField>
    <fullName>OREDER__c</fullName>
    <description>OREDER</description>
    <externalDeveloperName>OREDER</externalDeveloperName>
    <label>OREDER</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>