LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/PL_ID__c.field-meta.xml
<CustomField>
    <fullName>PL_ID__c</fullName>
    <description>PL_ID</description>
    <externalDeveloperName>PL_ID</externalDeveloperName>
    <label>PL_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>