LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/SERR_GROUP_ID__c.field-meta.xml
<CustomField>
    <fullName>SERR_GROUP_ID__c</fullName>
    <description>SERR_GROUP_ID</description>
    <externalDeveloperName>SERR_GROUP_ID</externalDeveloperName>
    <label>SERR_GROUP_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>