LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/SERV_LINE_DESC__c.field-meta.xml
<CustomField>
    <fullName>SERV_LINE_DESC__c</fullName>
    <description>SERV_LINE_DESC</description>
    <externalDeveloperName>SERV_LINE_DESC</externalDeveloperName>
    <label>SERV_LINE_DESC</label>
    <length>100</length>
    <type>Text</type>
</CustomField>