LinKreta_POC_Repository/force-app/main/default/objects/GM_SERV_LINES__x/fields/SERV_LINE_MID__c.field-meta.xml
<CustomField>
    <fullName>SERV_LINE_MID__c</fullName>
    <description>SERV_LINE_MID</description>
    <externalDeveloperName>SERV_LINE_MID</externalDeveloperName>
    <label>SERV_LINE_MID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>